// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snapshots Avatar with a loading indicator 1`] = `
.c0 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #eee;
  background-image: linear-gradient( to right, #eee 0%, #ccc 40%, #ddd 40%, #eee 100% );
  background-repeat: no-repeat;
  -webkit-animation: gdZBtx 1s linear infinite forwards;
  animation: gdZBtx 1s linear infinite forwards;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<div
  class="c0 c1 custom-class"
/>
`;

exports[`<Avatar /> Snapshots Avatar with an image 1`] = `
.c0 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<img
  alt="Avatar with image"
  class="c0 c1 custom-class"
  loading="lazy"
  src="https://yandex.ru/images/search?text=foto&pos=3&img_url=https%3A%2F%2Fget.wallhere.com%2Fphoto%2F2700x1800-px-building-castle-forest-Hohenzollern-landscape-1077207.jpg&rpt=simage"
/>
`;

exports[`<Avatar /> Snapshots Avatar without a image 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<img
  alt="Icon component"
  class="c0 c1"
  src="Person.svg"
/>
`;
